# comp-graph.lab3

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  app.py  experiment.ipynb  pyproject.toml
.github/workflow/: tests.yaml
.github/workflows/: code_style.yaml  tests.yaml
model/: README.md
src/: common.py  infer.py
src/features/: extraction.py  extraction_utils.py  features_classes.py
static/: style.css
templates/: index.html
tests/: constants.py  test_feature_extraction.py  test_inference.py  test_load_image.py  test_preprocessing.py
